<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView android:id="@+id/ImgProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/pizza" />

    <TextView android:id="@+id/TextProduct"
        android:text="@string/product"
        android:textSize="80px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImgProduct"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/InfoProduct"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/info_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextProduct"
        android:layout_centerHorizontal = "true"
        android:onClick="moreInfo" />

    <TextView android:id="@+id/TitleIngredients"
        android:text="@string/title_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoProduct"
        android:layout_alignParentLeft = "true"
        android:layout_marginLeft = "20px"/>

    <TextView android:id="@+id/Ingredients"
        android:text="@string/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/TitleIngredients"
        android:layout_alignParentLeft = "true"
        android:layout_marginLeft = "20px"
        android:layout_marginBottom = "40px"/>

    <TextView android:id="@+id/Price"
        android:text="@string/price"
        android:textSize="80px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ingredients"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentBottom = "true"
        android:layout_marginLeft = "20px"/>

    <Button android:id="@+id/Add"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ingredients"
        android:layout_alignParentRight = "true"
        android:layout_marginRight = "20px"
        android:onClick="addProduct"/>




</RelativeLayout>
